gem updates security

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    title Paporeto
+    title Rich_Villela
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = csrf_meta_tags
 
@@ -10,7 +10,7 @@ html
     .navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
-          a class="navbar-brand" href="#" Bodybuild
+          a class="navbar-brand" href="#" Rich_Villela
         .navbar-collapse
             ul.nav.navbar-nav
               li.active
